--- a/index2.html
+++ b/index2.html
@@ -2,8 +2,22 @@
 <html>
 <body>
 
-
-<img src="dona.jpg" width="1024" height="768">
+  <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        .imgbox {
+            display: grid;
+            height: 100%;
+        }
+        .center-fit {
+            max-width: 100%;
+            max-height: 100vh;
+            margin: auto;
+        }
+    </style>
+<img class="center-fit" src="dona.jpg" width="1024" height="768">
 
 </body>
 </html>
