--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
     <a-nft
       type="nft"
-      url="dona"
+      url="https://famigone.github.io/imageTracking/dona"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
@@ -50,7 +50,7 @@
     >
         <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
         <a-entity
-            gltf-model="dona.glb"
+            gltf-model="https://famigone.github.io/imageTracking/dona.glb"
             scale="5 5 5"
             position="50 150 0"
         >
