--- a/index2.html
+++ b/index2.html
@@ -16,8 +16,8 @@
             max-height: 100vh;
             margin: auto;
         }
-    </style>
-<img class="center-fit" src="dona.jpg" width="1024" height="768">
+    </style>    
+<img class="center-fit" src="dona.png">
 
 </body>
 </html>
