--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             type='nft' url='https://famigone.github.io/imageTracking/trex'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'> 
             <a-entity
-                gltf-model='https://famigone.github.io/imageTracking/dona.gltf'                
+                gltf-model='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf'                
                 scale="5 5 5"
                 position="100 100 0"
                 >
