--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <!-- use rawgithack to retrieve the correct url for nft marker (see 'trex' below) -->
         <a-nft
-            type='nft' url='https://famigone.github.io/imageTracking/trex'
+            type='nft' url='https://famigone.github.io/imageTracking/dona'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'> 
             <a-entity
                 gltf-model='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf'                
