--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             type='nft' url='https://famigone.github.io/imageTracking/dona'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'> 
             <a-entity
-                gltf-model='https://famigone.github.io/imageTracking/rosca.gltf'                
+                gltf-model='https://famigone.github.io/imageTracking/dona.gltf'                
                 scale="5 5 5"
                 position="100 100 0"
                 >
