--- a/index.html
+++ b/index.html
@@ -39,14 +39,13 @@
             type='nft' url='https://famigone.github.io/imageTracking/dona'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'> 
             <a-entity
-                gltf-model='https://famigone.github.io/imageTracking/dona.gltf'                
-                scale="5 5 5"
+                gltf-model='https://famigone.github.io/imageTracking/scene.gltf'                
+                scale="1 1 1"
                 position="100 100 0"
                 >
             </a-entity>
         </a-nft>
     <a-entity camera></a-entity>
     </a-scene>
-    
 </body>
 
